--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,7 +40,7 @@
     <!-- Main activity. -->
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/snowball"
         android:label="@string/app_name" >
         <!-- Register Activity -->
         <activity
