--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -40,7 +40,7 @@
     <!-- Main activity. -->
     <application
         android:allowBackup="true"
-        android:icon="@drawable/snowball"
+        android:icon="@drawable/snowball_launcher_72px"
         android:label="@string/app_name" >
         <!-- Register Activity -->
         <activity
