--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,10 +6,15 @@
 
     <!-- GCM requires Android SDK version 2.2 (API level 8) or above. -->
     <uses-sdk
-        android:minSdkVersion="15"
+        android:minSdkVersion="17"
         android:targetSdkVersion="19" />
+    
+    <!-- OpenGL ES version 2 used by Google Maps API -->
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
-    <!-- GCM connects to Internet Services. -->
+    <!-- GCM and Google Maps connects to Internet Services -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- GCM requires a Google account. -->
@@ -27,9 +32,21 @@
 
     <!-- This application has permission to register and receive data message. -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    
+    <!-- Got an exception to add this after adding Google Maps  -->
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
-    <!-- Network State Permissions to detect Internet status -->
+    <!-- Network State Permissions to detect Internet status used by GCM and Google Maps -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
+    <!-- Used by Google Maps API -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
+    <!-- Optionally used by Google Maps API -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    
+    <!-- Optionally used by Google Maps API -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <!-- Permission to vibrate -->
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -59,7 +76,7 @@
             android:name="com.snowball.MainActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" >
-        </activity>        
+        </activity>
         <activity
             android:name="com.snowball.TaskListActivity"
             android:label="@string/app_name" >
@@ -67,8 +84,9 @@
         <activity android:name="com.snowball.DetailActivity" >
         </activity>
         <activity android:name="com.snowball.PrefsActivity" >
+        </activity>        
+        <activity android:name=".MapPane" >
         </activity>
-        
 
         <provider
             android:name="com.snowball.db.TaskContentProvider"
@@ -91,6 +109,13 @@
         </receiver>
 
         <service android:name="com.snowball.GCMIntentService" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCGHZ5I2gmw-J3qxlZNMoHywm9adR8Y2lk" />
     </application>
 
 </manifest>
