Doing major commit after a few days, also selected a bunch of files that were not selected before. At this stage we have tab and lists and detail and a half working app. Working on registration is still broken and preferences lacking. We don't have a proper model yet as well.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -81,7 +81,7 @@
             android:name="com.snowball.TaskListActivity"
             android:label="@string/app_name" >
         </activity>
-        <activity android:name="com.snowball.DetailActivity" >
+        <activity android:name="com.snowball.JobDetailActivity" >
         </activity>
         <activity android:name="com.snowball.PrefsActivity" >
         </activity>        
