--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,11 +8,11 @@
     <uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="19" />
-    
+
     <!-- OpenGL ES version 2 used by Google Maps API -->
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <!-- GCM and Google Maps connects to Internet Services -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -32,19 +32,19 @@
 
     <!-- This application has permission to register and receive data message. -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    
-    <!-- Got an exception to add this after adding Google Maps  -->
+
+    <!-- Got an exception to add this after adding Google Maps -->
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <!-- Network State Permissions to detect Internet status used by GCM and Google Maps -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    
+
     <!-- Used by Google Maps API -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
+
     <!-- Optionally used by Google Maps API -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    
+
     <!-- Optionally used by Google Maps API -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
@@ -63,7 +63,7 @@
         <!-- Register Activity -->
         <activity
             android:name="com.snowball._backup.RegisterActivity"
-            android:label="@string/app_name" >            
+            android:label="@string/app_name" >
         </activity>
 
         <!-- Main Activity -->
@@ -73,6 +73,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -83,7 +84,7 @@
         <activity android:name="com.snowball.JobDetailActivity" >
         </activity>
         <activity android:name="com.snowball.PrefsActivity" >
-        </activity>        
+        </activity>
         <activity android:name=".MapPane" >
         </activity>
 
@@ -115,6 +116,15 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCGHZ5I2gmw-J3qxlZNMoHywm9adR8Y2lk" />
+    </application>
+
+    <!-- Global App used for preferences -->
+    <application
+        android:name="App"
+        android:allowBackup="true"
+        android:icon="@drawable/snowball_launcher_72px"
+        android:label="@string/app_name"
+    >
     </application>
 
 </manifest>
