--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -85,17 +85,17 @@
         </activity>
         <activity android:name="com.snowball.PrefsActivity" >
         </activity>
-        <activity android:name=".MapPane" >
+        <activity android:name="com.snowball.MapPane" >
         </activity>
 
         <provider
-            android:name="com.snowball.db.JobsContentProvider"
+            android:name="com.snowball.db.MyContentProvider"
             android:authorities="com.snowball"
             android:exported="false" >
         </provider>
 
         <receiver
-            android:name="com.snowball.gcm.GCMBroadcastReceiver"            
+            android:name="com.snowball.gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
 
@@ -116,15 +116,24 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCGHZ5I2gmw-J3qxlZNMoHywm9adR8Y2lk" />
+
+        <activity
+            android:name="com.snowball.BuildCustomLayout"
+            android:label="@string/title_activity_build_custom_fields" >
+        </activity>
+        
+        <activity
+            android:name="com.snowball.BuildAlertDialog" >        
+        </activity>
+        
     </application>
 
     <!-- Global App used for preferences -->
     <application
-        android:name="App"
+        android:name="com.snowball.App"
         android:allowBackup="true"
         android:icon="@drawable/snowball_launcher_72px"
-        android:label="@string/app_name"
-    >
+        android:label="@string/app_name" >
     </application>
 
 </manifest>
