--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.snowball"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="za.co.snowball.jobtracker"
+    android:versionCode="2"
+    android:versionName="1.1" >
 
     <!-- GCM requires Android SDK version 2.2 (API level 8) or above. -->
     <uses-sdk
@@ -25,10 +25,10 @@
 
     <!-- Creates a custom permission so only this application can receive its messages. -->
     <permission
-        android:name="com.snowball.permission.C2D_MESSAGE"
+        android:name="za.co.snowbal.jobtracker.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.snowball.permission.C2D_MESSAGE" />
+    <uses-permission android:name="za.co.snowbal.jobtracker.permission.C2D_MESSAGE" />
 
     <!-- This application has permission to register and receive data message. -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -56,19 +56,20 @@
 
     <!-- Main activity. -->
     <application
+        android:name="za.co.snowball.jobtracker.App"
         android:allowBackup="true"
         android:icon="@drawable/snowball_launcher_72px"
         android:label="@string/app_name" >
 
         <!-- Register Activity -->
         <activity
-            android:name="com.snowball._backup.RegisterActivity"
+            android:name="za.co.snowball.jobtracker.backup.RegisterActivity"
             android:label="@string/app_name" >
         </activity>
 
         <!-- Main Activity -->
         <activity
-            android:name="com.snowball.MainActivity"
+            android:name="za.co.snowball.jobtracker.MainActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" >
             <intent-filter>
@@ -78,24 +79,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.snowball.TaskListActivity"
+            android:name="za.co.snowball.jobtracker.TaskListActivity"
             android:label="@string/app_name" >
         </activity>
-        <activity android:name="com.snowball.JobDetailActivity" >
+        <activity android:name="za.co.snowball.jobtracker.JobDetailActivity" >
         </activity>
-        <activity android:name="com.snowball.PrefsActivity" >
+        <activity android:name="za.co.snowball.jobtracker.PrefsActivity" >
         </activity>
-        <activity android:name="com.snowball.MapPane" >
+        <activity android:name="za.co.snowball.jobtracker.MapPane" >
         </activity>
 
         <provider
-            android:name="com.snowball.db.MyContentProvider"
-            android:authorities="com.snowball"
+            android:name="za.co.snowball.jobtracker.db.MyContentProvider"
+            android:authorities="za.co.snowball.jobtracker"
             android:exported="false" >
         </provider>
 
         <receiver
-            android:name="com.snowball.gcm.GCMBroadcastReceiver"
+            android:name="za.co.snowball.jobtracker.gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
 
@@ -104,11 +105,11 @@
                 <!-- Receives the registration id. -->
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <category android:name="com.snowball" />
+                <category android:name="za.co.snowbal.jobtracker" />
             </intent-filter>
         </receiver>
 
-        <service android:name="com.snowball.GCMIntentService" />
+        <service android:name="za.co.snowball.jobtracker.GCMIntentService" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -118,22 +119,16 @@
             android:value="AIzaSyCGHZ5I2gmw-J3qxlZNMoHywm9adR8Y2lk" />
 
         <activity
-            android:name="com.snowball.BuildCustomLayout"
+            android:name="za.co.snowball.jobtracker.BuildCustomLayout"
             android:label="@string/title_activity_build_custom_fields" >
         </activity>
         
         <activity
-            android:name="com.snowball.BuildAlertDialog" >        
+            android:name="za.co.snowball.jobtracker.BuildAlertDialog" >        
         </activity>
         
     </application>
 
     <!-- Global App used for preferences -->
-    <application
-        android:name="com.snowball.App"
-        android:allowBackup="true"
-        android:icon="@drawable/snowball_launcher_72px"
-        android:label="@string/app_name" >
-    </application>
-
+   
 </manifest>
